syntax = "proto3";

import "google/protobuf/empty.proto";

message User {
  int32 id = 1;
  string email = 2;
  optional string name = 3;
}

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (User);
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc GetAllUsers (google.protobuf.Empty) returns (stream User);
  rpc DeleteUserById (GetUserByIdRequest) returns (google.protobuf.Empty);
  rpc UpdateUser (User) returns (User);
}

message GetUserByIdRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string email = 1;
  optional string name = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  string email = 2;
  optional string name = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message GetAllUsersRequest {
}